# ElementaryHttpServer

./: CMakeLists.txt  Dockerfile  README.md  httpreqparser.cpp  httprspcompiler.cpp  main.cpp  make.bat  processor.cpp  processor.h  run.bat  scockfdwr.cpp  scockfdwr.h  server.cpp  server.h  sockfdwr.cpp  sockfdwr.h  start.sh  worker.cpp  worker.h
src/: httpreqparser.h  httprspcompiler.h  main.cpp  processor.cpp  server.cpp  worker.cpp  worker.h
www/: index.html
